--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,8 +20,13 @@ body {
   pointer-events: none;
 }
 
+.dropdown-menu-right {
+  right: 0 !important;
+  left: auto !important;
+}
+
 .avatar-mini {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   object-fit: cover;
 }
