--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,3 +30,19 @@ body {
   height: 50px;
   object-fit: cover;
 }
+
+#page-container {
+  position: relative;
+  min-height: 72vh;
+}
+
+#content-wrap {
+  padding-bottom: 2.5rem; /* Footer height */
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem; /* Footer height */
+}
