--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,3 +46,31 @@ body {
   width: 100%;
   height: 2.5rem; /* Footer height */
 }
+
+.container-img {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  margin: 100px auto;
+  justify-content: center;
+}
+
+.box {
+  width: 500px;
+  margin: 0 10px;
+  box-shadow: 0 0 20px rgba(243, 243, 243, 0.6);
+  transition: 1s;
+  
+}
+
+.box img {
+  display: block;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.box:hover{
+  transform: scale(1.3);
+  z-index: 2;
+}
