--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: "Josefin Sans", sans-serif;
+  background-image: url('./images/Background.jpg');
 }
 .background-color {
   background-color: rgb(255, 255, 255);
