--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,4 +80,7 @@ body {
   background-color: rgba(0, 0, 0, 0.112);
   padding: 10px;
   border-radius: 30px;
+  width: fit-content;
+  margin-left: 70px;
+  
 }
