Public images delete, Loading Pages, Plants=>Plant

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,3 +84,14 @@ body {
   margin-left: 70px;
   
 }
+
+.loading-box {
+display: flex ;
+text-align: center;
+justify-content: center;
+position:relative;
+top:0;
+left: 0;
+bottom: 0;
+right: 0;
+}
