--- a/client/src/App.css
+++ b/client/src/App.css
@@ -76,22 +76,33 @@ body {
   z-index: 2;
 }
 
-.container-title {
-  background-color: rgba(0, 0, 0, 0.112);
-  padding: 10px;
-  border-radius: 30px;
-  width: fit-content;
-  margin-left: 70px;
+.loading-parent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: transparent;
+}
+
+.loading-line {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.loading-line div {
+  width: 100px;
+  height: 5px;
+  background-color: black;
+}
+
+.loading-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgb(16, 3, 3);
   
 }
 
-.loading-box {
-display: flex ;
-text-align: center;
-justify-content: center;
-position:relative;
-top:0;
-left: 0;
-bottom: 0;
-right: 0;
-}
